--- a/ShareX_Steam/ShareX_Steam.csproj
+++ b/ShareX_Steam/ShareX_Steam.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ShareX.Steam</RootNamespace>
-    <AssemblyName>ShareX-Launcher</AssemblyName>
+    <AssemblyName>ShareX_Launcher</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
