--- a/ShareX_Steam/ShareX_Steam.csproj
+++ b/ShareX_Steam/ShareX_Steam.csproj
@@ -57,6 +57,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <Content Include="ShareX_Icon.ico" />
+    <None Include="installscript.vdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="steam_api.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
