steam_appid.txt needed if launcher need to start as shortcut

--- a/ShareX_Steam/ShareX_Steam.csproj
+++ b/ShareX_Steam/ShareX_Steam.csproj
@@ -53,6 +53,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="steam_appid.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="CSteamworks.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
